Fix deploy maybe?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,8 @@ jobs:
     name: Deploy
     needs: [build]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Download Artifacts
         uses: actions/download-artifact@v2
         with:
