--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build
         run: just build --release
+      - name: Debug
+        run: find build
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -61,6 +63,8 @@ jobs:
         with:
           name: build
           path: build
+      - name: Debug
+        run: find build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
